snapshots/syntax/library/functions/file/filelen/filelen_print_statement.snap
---
source: src/syntax/library/functions/file/filelen.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: PrintStatement
      children:
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: Octothorpe
          text: "#"
        - kind: Identifier
          text: reportNum
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: fileName
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: FileLen
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: fullPath
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
